k8s-manifest/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/sellerbot-frontend-default: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: CHOKIDAR_USEPOLLING
              value: "true"
            - name: HOST
              value: 0.0.0.0
          image: losimonassi/sellerbot_frontend
          name: sellerbot-frontend
          ports:
            - containerPort: 8080
          resources: {}
          stdin: true
          tty: true
      restartPolicy: Always
status: {}
