k8s-manifest/sellerbot-frontend-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: sellerbot-frontend-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/sellerbot-frontend-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/sellerbot-frontend-default: "true"
